<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="Instrucciones"
        android:paddingTop="0px"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/description"
        android:paddingTop="10px"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="10px"
        android:text="Reglas"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:paddingTop="20px"
        android:gravity="center"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="20px"
        android:gravity="center"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="20px"
        android:gravity="center"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:paddingTop="20px"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:paddingTop="20px"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:paddingTop="20px"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:gravity="center"
        android:paddingTop="20px"
        android:paddingRight="30px"
        android:paddingLeft="30px"
        android:textStyle="italic"
        android:text="@string/rule7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
